# datedelta

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  usage.rst
src/datedelta/: __init__.py  __main__.py  cli.py  date.py
tests/: conftest.py  test_cli.py  test_date.py  utils.py
