[metadata]
name = datedelta
description = ...
author = James Keal
license = MIT
license_file = LICENSE

[options]
packages = datedelta
python_requires = >=3.6
package_dir = =src

[options.entry_points]
console_scripts =
    datedelta = datedelta.__main__:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
datedelta = py.typed

[flake8]
max-line-length = 80
per-file-ignores =
    src/datedelta/__init__.py:F401
    tests/*:E201,E221
